# spark_dataengineering

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: local-setup-test.yaml
data_transformations/citibike/: distance_transformer.py
data_transformations/raster/: batch_ingest_rasters.py  cog.py  ingest.py  process_raster_memory_improved.py  zonal_stats.py
jobs/: convert_to_cog.py  raster_batch_ingest.py  raster_ingest.py  raster_zonal_stats.py  visualize_raster_band.py  visualize_zonal_stats.py
resources/: clip.gpkg  clipped_raster.tif  clipped_raster.tif.aux.xml  clipped_raster_cog.tif
resources/citibike/: citibike_extension.csv
tests/: test_geotools.py  test_sedona.py
tests/integration/: conftest.py  test_distance_transformer.py
tests/unit/: test_batch_ingest_rasters.py  test_raster.py  test_zonal_statistics.py
